--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "1.0.1",
   "description": "Package for test",
   "main": "index.js",
+  "type": "module",
   "scripts": {
     "test": "test"
   },
